# Integrator

./: .gitignore  CMakeLists.txt  IntegratorQT.ui  Makefile  README.md  info.txt  main.cpp  updateCMake.sh
CPM_modules/: Findrapidxml.cmake
data/: eq1.xml  eq2.xml  eq3.xml  eq4.xml  eq5.xml
src/: equation.cpp  equation.h  equation_node.cpp  equation_node.h  main.cpp  main2.cpp  workspace.h  xmlparser.cpp  xmlparser.h
